added logic for release builds and removing assertions

--- a/config.conf
+++ b/config.conf
@@ -1,3 +1,6 @@
+#Is this a release build? if 1, pjsip assertions are turned off
+IS_RELEASE_BUILD=0
+
 #The URL from which to download Android NDK
 NDK_DOWNLOAD_URL="http://dl.google.com/android/ndk/android-ndk-r10e-linux-x86_64.bin"
 
@@ -61,12 +64,12 @@ LIBYUV_REPO_DIR_NAME="libyuv-android"
 #uncomment the following one if you want to build for 64 bit archs. Bear in mind that
 #to build for 64 bit you have to use Android API 21+ and not all the libraries support that.
 #check the build compatibility matrix in the readme and in the issues for further reference.
-TARGET_ARCHS=("armeabi" "armeabi-v7a" "x86")
+#TARGET_ARCHS=("armeabi" "armeabi-v7a" "x86")
 #TARGET_ARCHS=("armeabi" "armeabi-v7a" "x86" "mips")
-#TARGET_ARCHS=("armeabi" "armeabi-v7a" "x86" "mips" "arm64-v8a" "x86_64" "mips64")
+TARGET_ARCHS=("armeabi" "armeabi-v7a" "x86" "mips" "arm64-v8a" "x86_64" "mips64")
 
 #Android APIs to setup
-SETUP_ANDROID_APIS=("18" "21")
+SETUP_ANDROID_APIS=("18" "23")
 BUILD_TOOLS_VERSION=23
 
 #Target Android API level
@@ -80,7 +83,7 @@ TARGET_ANDROID_API=18
 SETUP_PACKAGES=1
 
 #Download a fresh copy of Android NDK. Any existing NDK will be replaced
-DOWNLOAD_NDK=1
+DOWNLOAD_NDK=0
 
 #Download a fresh copy of Android SDK. Any existing SDK will be replaced
 DOWNLOAD_SDK=1
@@ -95,10 +98,10 @@ DOWNLOAD_PJSIP=1
 DOWNLOAD_SWIG=1
 
 #Downloads a fresh copy of OpenSSH. Any existing files will be deleted
-DOWNLOAD_OPENSSL=1
+DOWNLOAD_OPENSSL=0
 
 #Downloads a fresh copy of OpenH264. Any existing files will be deleted
-DOWNLOAD_OPENH264=1
+DOWNLOAD_OPENH264=0
 
 #Downloads a fresh copy of libyuv. Any existing files will be deleted
-DOWNLOAD_LIBYUV=1
+DOWNLOAD_LIBYUV=0
