--- a/build
+++ b/build
@@ -26,13 +26,23 @@ mkdir -p "${FINAL_BUILD_LOGS}"
 echo "Creating config site file for Android ..."
 cat <<EOF > "$CONFIG_SITE_PATH"
 #define PJ_CONFIG_ANDROID 1
-#define PJMEDIA_HAS_G7221_CODEC 1
+#define PJMEDIA_HAS_G7221_CODEC 0
 #include <pj/config_site_sample.h>
-#define PJMEDIA_HAS_VIDEO 1
-#define PJMEDIA_AUDIO_DEV_HAS_ANDROID_JNI 0
-#define PJMEDIA_AUDIO_DEV_HAS_OPENSL 1
+#define PJMEDIA_HAS_VIDEO 0
+#define PJMEDIA_AUDIO_DEV_HAS_ANDROID_JNI 1
+#define PJMEDIA_AUDIO_DEV_HAS_OPENSL 0
 #define PJSIP_AUTH_AUTO_SEND_NEXT 0
+#include <android/log.h>
+#define pj_assert(expr) if (!(expr)) { __android_log_print(ANDROID_LOG_ERROR, __FILE__, "Assertion raised at line %d in file\n", __LINE__);}
+#define NDEBUG 1
+#define DEBUG 0
 EOF
+
+if [ ${IS_RELEASE_BUILD} = 1 ]; then
+    echo "disabling pjsip assertions..."
+    echo "#include <android/log.h>" >> $CONFIG_SITE_PATH
+    echo "#define pj_assert(expr) if (!(expr)) { __android_log_print(ANDROID_LOG_ERROR, __FILE__, \"Assertion raised at line %d in file\n\", __LINE__);}" >> $CONFIG_SITE_PATH
+fi
 
 for arch in "${TARGET_ARCHS[@]}"
 do
@@ -43,16 +53,16 @@ do
     cp -r * "${PJSIP_TMP_PATH}"
     cd "${PJSIP_TMP_PATH}"
 
-    #following instructions from here: http://trac.pjsip.org/repos/ticket/1776
-    YUV_RELEASE_FOLDER="${BASE_FOLDER}/${LIBYUV_REPO_DIR_NAME}/jni/out/Release"
-    rm -rf "${YUV_RELEASE_FOLDER}"
-    mkdir -p "${YUV_RELEASE_FOLDER}"
-    cp "${BASE_FOLDER}/${LIBYUV_REPO_DIR_NAME}/libs/${arch}/libyuv.so" ${YUV_RELEASE_FOLDER}
+#    following instructions from here: http://trac.pjsip.org/repos/ticket/1776
+#    YUV_RELEASE_FOLDER="${BASE_FOLDER}/${LIBYUV_REPO_DIR_NAME}/jni/out/Release"
+#    rm -rf "${YUV_RELEASE_FOLDER}"
+#    mkdir -p "${YUV_RELEASE_FOLDER}"
+#    cp "${BASE_FOLDER}/${LIBYUV_REPO_DIR_NAME}/libs/${arch}/libyuv.so" ${YUV_RELEASE_FOLDER}
 
     APP_PLATFORM=android-${TARGET_ANDROID_API} TARGET_ABI=$arch ./configure-android --use-ndk-cflags \
-                                         --with-ssl="${OPENSSL_BUILD_OUT_PATH}/libs/${arch}" \
-                                         --with-openh264="${OPENH264_BUILD_OUT_PATH}/libs/${arch}" \
-                                         --with-libyuv="${BASE_FOLDER}/${LIBYUV_REPO_DIR_NAME}/jni" \
+                                         --disable-asm \
+					 --enable-pic \
+					 --disable-yasm \
                                          >>"${FINAL_BUILD_LOGS}/${arch}.log" 2>&1
     make dep >>"${FINAL_BUILD_LOGS}/${arch}.log" 2>&1
     make >>"${FINAL_BUILD_LOGS}/${arch}.log" 2>&1
@@ -65,13 +75,13 @@ do
     mkdir -p "${FINAL_BUILD_LIB}/${arch}"
     mv "${PJSUA_GENERATED_SO_PATH}" "${FINAL_BUILD_LIB}/${arch}/"
 
-    if [ -f ${OPENH264_BUILD_OUT_PATH}/libs/${arch}/lib/libopenh264.so ]; then
-        echo "Copying OpenH264 .so library to final build directory ..."
-        cp ${OPENH264_BUILD_OUT_PATH}/libs/${arch}/lib/libopenh264.so ${FINAL_BUILD_LIB}/${arch}/
-    fi
+#    if [ -f ${OPENH264_BUILD_OUT_PATH}/libs/${arch}/lib/libopenh264.so ]; then
+#        echo "Copying OpenH264 .so library to final build directory ..."
+#        cp ${OPENH264_BUILD_OUT_PATH}/libs/${arch}/lib/libopenh264.so ${FINAL_BUILD_LIB}/${arch}/
+#    fi
 
-    echo "Copying libyuv .so library to final build directory ..."
-    cp "${BASE_FOLDER}/${LIBYUV_REPO_DIR_NAME}/libs/${arch}/libyuv.so" ${FINAL_BUILD_LIB}/${arch}/
+#    echo "Copying libyuv .so library to final build directory ..."
+#    cp "${BASE_FOLDER}/${LIBYUV_REPO_DIR_NAME}/libs/${arch}/libyuv.so" ${FINAL_BUILD_LIB}/${arch}/
 done
 
 echo "Copying PJSUA2 java bindings to final build directory ..."
