--- a/build
+++ b/build
@@ -87,3 +87,8 @@ echo "Copying PJSUA2 java bindings to final build directory ..."
 cp -r "${PJSUA_GENERATED_SRC_DIR}" "${FINAL_BUILD_DIR}"
 rm -rf "${PJSIP_TMP_PATH}"
 echo "Finished! Check the generated output in ${FINAL_BUILD_DIR}"
+
+#EXTRA OPTIONS TO BUILD WITH
+#--with-ssl="${OPENSSL_BUILD_OUT_PATH}/libs/${arch}" \
+#--with-openh264="${OPENH264_BUILD_OUT_PATH}/libs/${arch}" \
+#--with-libyuv="${BASE_FOLDER}/${LIBYUV_REPO_DIR_NAME}/jni" \
